[gd_scene load_steps=10 format=3 uid="uid://bv54da32xc2ts"]

[ext_resource type="PackedScene" uid="uid://cv33g4vg1miot" path="res://entities/attackable/prey/prey.tscn" id="1_646xb"]
[ext_resource type="Texture2D" uid="uid://bucynqqicfeb1" path="res://entities/attackable/prey/bunny/bunny.png" id="2_054dr"]
[ext_resource type="Script" path="res://entities/attackable/prey/bunny/bunny.gd" id="2_ba8f7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_16jxj"]
radius = 1.0
height = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lstp0"]
radius = 7.07107

[sub_resource type="Animation" id="Animation_q7xa7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scaler/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scaler:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.9, 1.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Scaler:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bpyj0"]
resource_name = "hop"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scaler/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scaler:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 34.2967),
"update": 0,
"values": [Vector2(1.1, 0.9), Vector2(0.9, 1.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Scaler:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4)]
}

[sub_resource type="Animation" id="Animation_ld7r8"]
resource_name = "idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rm8ce"]
_data = {
"RESET": SubResource("Animation_q7xa7"),
"hop": SubResource("Animation_bpyj0"),
"idle": SubResource("Animation_ld7r8")
}

[node name="Bunny" instance=ExtResource("1_646xb")]
motion_mode = 0
platform_on_leave = 0
script = ExtResource("2_ba8f7")
wander_speed = 100.0
run_speed = 300.0
accel = 30.0
min_hop_time = 0.5
max_hop_time = 1.0

[node name="Scaler" parent="." index="0"]
scale = Vector2(0.9, 1.1)

[node name="Sprite" parent="Scaler" index="0"]
position = Vector2(0, -5.96046e-08)
texture = ExtResource("2_054dr")
offset = Vector2(0, -5.45455)
hframes = 2
frame = 1

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_16jxj")

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_lstp0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_rm8ce")
}

[node name="CollisionShape2D" parent="PlayerDetection" index="1"]
visible = false

[node name="HopTime" type="Timer" parent="." index="5"]
one_shot = true

[node name="DamageManager" parent="." index="6"]
max_health = 4.0

[connection signal="timeout" from="HopTime" to="." method="_change_hop_direction"]
[connection signal="dead" from="DamageManager" to="." method="_drop_meat"]
